--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: ftb
-      run: ./ftb
+      run: |
+        chmod +x ./ftb
+        ./ftb
