--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: ftb
+    - name: fbt
       run: |
-        chmod +x ./ftb
-        ./ftb
+        chmod +x ./fbt
+        ./fbt
